@@ -1,5 +1,11 @@
 2011-08-13  hmandevteam  <hmandevteam@gmail.com>
 
+	* Src/Classes/GlobalObj.cs:
+	* Properties/AssemblyInfo.cs: 
+	- improved close/open reader action
+
+2011-08-13  hmandevteam  <hmandevteam@gmail.com>
+
 	* Languages/en-US.xml:
 	* Languages/it-IT.xml:
 	* Src/Classes/GlobalObj.cs: 
